force-app/main/default/objects/Invoice_Request_Line__c/Invoice_Request_Line__c.object-meta.xml
<CustomObject>
    <label>Invoice Request Line</label>
    <nameField>
        <label>Invoice Request Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Request Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>