force-app/main/default/objects/Invoice_Request_Line__c/fields/Invoice_Request__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Request__c</fullName>
    <label>Invoice Request</label>
    <referenceTo>Invoice_Request__c</referenceTo>
    <relationshipLabel>Invoice Request Lines</relationshipLabel>
    <relationshipName>Invoice_Request_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>