force-app/main/default/objects/Invoice_Request_Line__c/fields/Net_Price_Overage_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_Overage_Snapshot__c</fullName>
    <label>Net Price Overage Snapshot</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>