force-app/main/default/objects/Invoice_Request_Line__c/fields/Net_Price_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Net_Price_Taxes__c</fullName>
    <label>Net Price Taxes</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>