force-app/main/default/objects/Invoice_Request_Line__c/fields/Original_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Quote Line</label>
    <referenceTo>SBQQ__QuoteLine__c</referenceTo>
    <relationshipLabel>Invoice Request Lines</relationshipLabel>
    <relationshipName>Invoice_Request_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>