force-app/main/default/objects/Invoice_Request_Line__c/fields/Original_Quote_Line_Product_Family_code__c.field-meta.xml
<CustomField>
    <fullName>Original_Quote_Line_Product_Family_code__c</fullName>
    <label>Original Quote Line Product Family code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>