force-app/main/default/objects/Invoice_Request_Line__c/fields/Overage_Amount_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Overage_Amount_Snapshot__c</fullName>
    <label>Overage Amount Snapshot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>