force-app/main/default/objects/Invoice_Request_Line__c/fields/Pricebook_Entry_Id__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Entry_Id__c</fullName>
    <label>Pricebook Entry Id</label>
    <length>64</length>
    <type>Text</type>
</CustomField>