force-app/main/default/objects/Invoice_Request_Line__c/fields/QuickBooks_Account_Term_ID__c.field-meta.xml
<CustomField>
    <fullName>QuickBooks_Account_Term_ID__c</fullName>
    <formula>CASE(
    UPPER(TRIM(Related_Account_Term_Code__c)),
    &quot;CONVERSION&quot;, 7,
    &quot;DUE ON RECEIPT&quot;, 1,
    &quot;NET 15&quot;, 2,
    &quot;NET 30&quot;, 3,
    &quot;NET 45&quot;, 5,
    &quot;NET 60&quot;, 4,
    &quot;NET 90&quot;, 6,
    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QuickBooks Account Term ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>