force-app/main/default/objects/Invoice_Request_Line__c/fields/QuoteLine_Expected_End_Date__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine_Expected_End_Date__c</fullName>
    <label>QuoteLine Expected End Date</label>
    <type>Date</type>
</CustomField>