force-app/main/default/objects/Invoice_Request_Line__c/fields/QuoteLine_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>QuoteLine_Start_Date__c</fullName>
    <label>QuoteLine Start Date</label>
    <type>Date</type>
</CustomField>