force-app/main/default/objects/Invoice_Request_Line__c/fields/Related_Account_Term_Code__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Term_Code__c</fullName>
    <label>Related Account Term Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>