force-app/main/default/objects/Invoice_Request_Line__c/fields/Subscription_Net_Price_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Net_Price_Taxes__c</fullName>
    <formula>Invoice_Request__r.Subscription__r.Net_Price_Taxes__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Net Price Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>