force-app/main/default/objects/Invoice_Request_Line__c/fields/Subscription_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Product_Type__c</fullName>
    <label>Subscription Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>