force-app/main/default/objects/Invoice_Request_Line__c/fields/Tax_Amount_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount_Snapshot__c</fullName>
    <label>Tax Amount Snapshot</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>